# cpp-study

./: .gitignore
OpenGLExperiments/: CMakeLists.txt  opengl_experiments.cpp
OpenGLTutorials/playground/: playground01.cpp
animals_oop/: CMakeLists.txt  README.md  hello.cpp  main.cpp
animals_oop/src/: figure.cpp  figure.h  main.cpp  rectangle.cpp  rectangle.h
arithmetic_expression/: CMakeLists.txt
arithmetic_expression/src/: main.cpp
assertions/: CMakeLists.txt  main.cpp
cpp-course/MyWorkspace/: Makefile  MyWorkspace.workspace
cpp-course/MyWorkspace/.codelite/: MyWorkspace.session
cpp-course/MyWorkspace/Project/: Project.project  Project1.mk  compile_flags.txt  main.cpp
cpp-course/MyWorkspace/Project2/: Project2.project  compile_flags.txt
cpp-course/cppprojects/project1/: main  main.cpp
cpp-course/section10strings/assignment/: main.cpp
cpp-course/section10strings/challenge/: main  main.cpp
cpp-course/section11functions/challenge/: a.out  main
cpp-course/section12functions/challenge/: main.cpp
cpp-course/section12pointers/: main  main.cpp
cpp-course/section13oop/challenge/: Movie.cpp  Movie.h  Movies.cpp  Movies.h  main.cpp
cpp-course/section13oop/deepcopy/: main  main.cpp
cpp-course/section13oop/shallowcopy/: main  main.cpp
cpp-course/section19ioandstreams/challenge1/: main  main.cpp
cpp-course/section19ioandstreams/challenge2/: main  main.cpp  responses.txt
cpp-course/section20stl/challenge1/: main  main.cpp
cpp-course/section20stl/challenge2/: main  main.cpp
force-utf8-windows/: CMakeLists.txt  main.c  main.cpp
graphics-from-scratch/: CMakeLists.txt  conanfile.txt
graphics-from-scratch/src/: main.cc
leetcode/implement_queue_using_stacks/: CMakeLists.txt  main.cpp
leetcode/merge_sorted_array/: CMakeLists.txt  main.cc
leetcode/merge_two_sorted_lists/: CMakeLists.txt  main.cc
leetcode/reverse_linked_list/: CMakeLists.txt  main.cc
leetcode/two_sum_array/: CMakeLists.txt  main.cc
opengl-course/: .clang-tidy  CMakeLists.txt  README.md  cmake_compile.bat  cmake_run.bat
opengl-course/.cache/clangd/index/: main.cpp.AD5A56DA3E92520F.idx  main.cpp.F07857F82A84CE50.idx  mesh.cpp.3958649D0BD1611D.idx  mesh.cpp.5F3C7A7E6A75B0B2.idx  mesh.h.24C7A818F0869F29.idx  mesh.h.8FC9F9BA967547E0.idx  shader.cpp.3A95C18E2AD80987.idx  shader.h.C9EC97887C37FFEE.idx  window.cpp.A6147D1A7EB5CD6F.idx  window.h.F16248C5B8D502B6.idx
opengl-course/libs/GLEW/: glew.pc
opengl-course/shaders/: shader.frag  shader.vert
opengl-course/src/: camera.cpp  camera.h  main.c  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
opengl-redbook/camera-control/: CMakeLists.txt  main.cpp
opengl-redbook/colors/: CMakeLists.txt  main.cpp
opengl-redbook/compile-glsl/: CMakeLists.txt  main.cpp
opengl-redbook/coordinate-systems/: CMakeLists.txt  main.cpp
opengl-redbook/cube/: CMakeLists.txt  main.cpp
opengl-redbook/indexed-draw/: main.cpp
opengl-redbook/instanced-cubes/: CMakeLists.txt  main.cpp
opengl-redbook/instanced-cubes/shaders/: triangles.frag  triangles.vert
opengl-redbook/primitive-restart/: CMakeLists.txt  main.cpp
opengl-redbook/primitive-restart/shaders/: triangles.frag
opengl-redbook/select-shader-subroutine/: CMakeLists.txt  main.cpp
opengl-redbook/textures/: CMakeLists.txt  main.cpp
opengl-redbook/tracy-profiling/: CMakeLists.txt  main.cpp  output.tracy
opengl-redbook/transformations/: CMakeLists.txt  main.cpp
opengl-redbook/triangle-strip/: main.cpp
opengl-redbook/uniform-blocks/: main.cpp
opengl-redbook/with-classes/: CMakeLists.txt
opengl-udemy-course/: CMakeLists.txt
opengl-udemy-course/shaders/: shader.frag  shader.vert
opengl-udemy-course/src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  my_window.cpp  my_window.h  shader.cpp  shader.h  texture.cpp  texture.h
qt-voidrealms/hello-qt/: CMakeLists.txt  main.cpp
qt-voidrealms/qobject-and-moc/: CMakeLists.txt  main.cpp  test.cpp  test.h
qt-voidrealms/qobjects-cannot-be-copied/: CMakeLists.txt  main.cpp
qtLoggingCategories/: CMakeLists.txt  main.cpp
tboxes/: CMakeLists.txt
tboxes/src/: config.cpp  config.h  i_figure.cpp  i_figure.h  i_printable.cpp  i_printable.h  invalid_measures_exception.cpp  invalid_measures_exception.h  main.cpp  square.cpp  square.h  toybox.cpp  toybox.h  toybox_not_found.cpp  toybox_not_found.h  triangle.cpp  triangle.h
terminaloptions/: CMakeLists.txt  Makefile  terminaloptions
terminaloptions/src/: config.h  main.cpp
tetris/: CMakeLists.txt  main.cpp  tetris
tetris/solved/: main.cpp  tetris
the-cherno-opengl/basic_renderer/: CMakeLists.txt
the-cherno-opengl/buffer_layout/: CMakeLists.txt
the-cherno-opengl/classes_refactoring/: CMakeLists.txt
the-cherno-opengl/classes_refactoring/src/: index_buffer.cpp  index_buffer.h  main.cpp  renderer.h  vertex_buffer.cpp  vertex_buffer.h
the-cherno-opengl/dealingerrors/: main.cpp
the-cherno-opengl/glewinit/: CMakeLists.txt  main.cpp
the-cherno-opengl/indexbuffers/: CMakeLists.txt  main.cpp
the-cherno-opengl/settingup/: CMakeLists.txt  main.cpp
the-cherno-opengl/shader_abstraction/: CMakeLists.txt
the-cherno-opengl/shadersinfile/: CMakeLists.txt  main.cpp
the-cherno-opengl/textures/: CMakeLists.txt
the-cherno-opengl/uniforms/: CMakeLists.txt  main.cpp
the-cherno-opengl/usingshaders/: CMakeLists.txt
the-cherno-opengl/vertex_arrays/: main.cpp
the-cherno-opengl/vertexbuffers/: CMakeLists.txt  main.cpp
wxformbuilder-tests/: CMakeLists.txt  FirstTestingProject.fbp  main.cpp
wxformbuilder-tests/ui/: wx_gui.cpp  wx_gui.h
wxformbuilder-tests/ui_implementation/: main_frame_implementation.cpp  main_frame_implementation.h
wxwidgets-cmake/: CMakeLists.txt
wxwidgets-cmake/src/: main.cpp
wxwidgets-crosscompile-makefile/: Makefile  README.md
wxwidgets-first-programs/console/: CMakeLists.txt  compile_commands.json  console.cpp
wxwidgets-first-programs/simple-application/: CMakeLists.txt  main.cpp  main.h  simple.cpp  simple.h
zmq/basics/: CMakeLists.txt
zmq/basics/src/: common.c  common.h  hwclient.c  hwserver.c
(+81 files in other folders)
